Mon Apr  3 21:29:18 2006  Tim Janik  <timj@gtk.org>

	* autogen.sh:
	* Makefile.am: upgrade to automake-1.9.

	* configure.in: fixed buglets.

Thu Mar  9 18:07:47 2006  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c: 
	* bsepcmdevice-alsa.c: adapted to birnet_ namespace.

Tue Mar  7 03:05:45 2006  Tim Janik  <timj@gtk.org>

	* configure.in: up version to 0.7.0, depend on bse-0.7.0.

Wed May 25 23:30:03 2005  Tim Janik  <timj@gtk.org>

	* release bse-alsa 0.6.6.
	
Sat May 14 20:47:52 2005  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c:
	* bsemididevice-alsa.c: use bse_device_set_opened().

	* configure.in: version upgrade to 0.6.6, use PACKAGE_ as variable
	prefix instead of PKG_ to circumvent autoconf errors.

Sat Dec 18 00:09:49 2004  Tim Janik  <timj@gtk.org>

	* configure.in: released 0.6.4, interface 0, binary 0.
	CFLAGS and CXXFLAGS fixups.

Thu Nov 18 15:10:33 2004  Tim Janik  <timj@gtk.org>

        * configure.in: released bse-alsa 0.6.3, binary 0, interface 0.

Mon Oct  4 09:42:31 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c: more libALSA silencing, to prevent error messages
	in blocking mode with xrun-stop enabled.

Mon Oct  4 09:16:16 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c (alsa_device_write): use snd_pcm_forward() and
	silence libALSA with snd_lib_error_set_handler().

Mon Oct  4 08:59:13 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c (bse_midi_device_alsa_open): 
	* bsepcmdevice-alsa.c (bse_pcm_device_alsa_open): silence alsalib during
	open() calls to avoid EBUSY error messages.

Sun Oct  3 19:02:46 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-alsa.c (alsa_device_check_io): fixed signed/unsigned
	comparison bug, reported by stefan.

Sat Oct  2 04:54:22 2004  Tim Janik  <timj@gtk.org>

	* bsemididevice-alsa.c (bse_midi_device_alsa_open): open devices 
	non-blocking so we don't hang on concurrent access.

Wed Sep 29 20:22:53 2004  Tim Janik  <timj@gtk.org>
